--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,4 +1,4 @@
-<!-- file: templates/partials/footer.html -->
-<footer>
-    <p>&copy; 2024 OCP Intranet. All rights reserved.</p>
+<!-- templates/partials/footer.html -->
+<footer class="footer bg-dark text-white text-center py-3">
+    <p>&copy; 2024 Alkalmazás - Minden jog fenntartva</p>
 </footer>
