--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,7 @@
 </head>
 <body>
 
-    <!-- Navigációs sáv (Navbar) -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
         <a class="navbar-brand" href="#">OCP</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Intranet</a>
+                    <a class="nav-link" href="{% url 'index' %}">Intranet</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Email</a>
@@ -43,14 +42,15 @@
                     <a class="nav-link" href="#">Retro</a>
                 </li>
             </ul>
-            <!-- "Adan" menüelem gombként, jobbra igazítva -->
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="btn btn-primary btn-sm" href="#">Adan</a>
+                    <a class="btn btn-primary btn-sm" href="{% url 'adan_view' %}">Adan</a>
                 </li>
-            </ul>
+            </ul>              
         </div>
     </nav>
+    
+    
 
 
 
