--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,7 +29,6 @@ input:focus, button:focus, textarea:focus {
     border-color: #ccc !important; /* Szürke szegély fókusz esetén is */
 }
 
-
 /* Gördítősáv testreszabása a teljes oldalon (globálisan) */
 
 /* Webkit-alapú böngészők gördítősávjának stílusa */
@@ -63,9 +62,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-  }
- 
-  /* Szövegmező és gomb közötti távolság */
+}
+
+/* Szövegmező és gomb közötti távolság */
 #user-input {
     margin-right: 10px;
     height: 40px; /* A szövegmező magassága */
@@ -79,23 +78,22 @@ body {
     align-items: center; /* Középre igazítjuk a szöveget */
 }
 
-/* Loader stílus az új animációval */
+/* Loader stílus */
 .loader {
-    color: #fff; /* Fehér szín */
-    width: 2px;  /* Kisebb szélesség, 2px-es csökkentés */
-    aspect-ratio: 1;
-    border-radius: 50%;
-    box-shadow: 17px 0 0 5px, 34px 0 0 2px, 51px 0 0 0;
-    transform: translateX(-34px); /* Kisebb eltolás */
-    animation: l21 .5s infinite alternate linear;
-  }
-  
-  @keyframes l21 {
-    50%  {box-shadow: 17px 0 0 2px, 34px 0 0 5px, 51px 0 0 2px;}
-    100% {box-shadow: 17px 0 0 0  , 34px 0 0 2px, 51px 0 0 5px;}
-  }
-  
-  
+    width: 24px; /* Kisebb szélesség */
+    height: 24px; /* Kisebb magasság */
+    border: 3px solid #fff; /* Háttérszín */
+    border-radius: 50%; /* Lekerekített */
+    border-top: 3px solid #ff5431; /* Bootstrap primary szín */
+    animation: spin 1s linear infinite; /* Forog */
+}
+
+/* Loader animáció */
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 /* Opcionális egyéni stílus a figyelmeztető üzenethez */
 .small.text-muted {
     font-size: 0.85rem; /* Kicsit kisebb betűméret */
