--- a/templates/base.html
+++ b/templates/base.html
@@ -61,8 +61,8 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer bg-light text-center py-3 mt-auto">
-        <p>&copy; 2024 OCP - Minden jog fenntartva</p>
+    <footer class="footer bg-light text-center text-muted py-3 mt-auto">
+        <p> &copy; OCP Detroit Police, Metro City</p>
     </footer>
 
     <!-- Bootstrap JS és jQuery -->
