--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <!-- Saját CSS (Alap beállítások) -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/chat.css' %}">
+    <link rel="stylesheet" href="{% static 'css/office.css' %}">
 </head>
 <body>
 
@@ -25,10 +26,10 @@
                     <a class="nav-link" href="{% url 'index' %}">Intranet</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Email</a>
+                    <a class="nav-link" href="{% url 'office' %}">Email</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Telefonkönyv</a>
+                    <a class="nav-link" href="{% url 'organization_chart' %}">Telefonkönyv</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Jira</a>
