Maillistener and other Cleanup

--- a/office/templates/office/office.html
+++ b/office/templates/office/office.html
@@ -9,8 +9,9 @@
     <div class="grid-sidebar" id="email-list">
         <!-- A kártyák ide fognak kerülni dinamikusan -->
     </div>
-    <div class="grid-main"></div>
-    {% comment %} <div class="loader-container"><div class="loader"></div></div> {% endcomment %}
+    <div class="grid-main">
+        {% comment %} <div class="oloader-container"><div class="oloader"></div></div> {% endcomment %}
+    </div>
     <div class="grid-footer">
         <button class="btn btn-secondary mx-2">Gomb 1</button>
         <button class="btn btn-secondary mx-2">Gomb 2</button>
