--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,9 @@
         <!-- Hírkártyák -->
         <div class="col-md-4 mb-4">
             <div class="card h-100">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Hírkép">
+                <img src="static/images/factory.png" class="card-img-top" alt="Hírkép">
                 <div class="card-body">
-                    <h5 class="card-title">ED-209 sorozatgyártás indul</h5>
+                    <h5 class="card-title">Gőzerővel dolgoznak az új gyártósorokon</h5>
                     <p class="card-text">Az OCP legújabb katonai fejlesztése, az ED-209 sorozatgyártása jövő hónapban kezdődik. A projekt célja, hogy megerősítse a városi rendfenntartó erőket és csökkentse a bűnözést.</p>
                     <a href="#" class="btn btn-primary">Részletek</a>
                 </div>
@@ -27,7 +27,7 @@
         </div>
         <div class="col-md-4 mb-4">
             <div class="card h-100">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Hírkép">
+                <img src="static/images/delta_city.png" class="card-img-top" alt="Hírkép">
                 <div class="card-body">
                     <h5 class="card-title">Delta City fejlesztés frissítések</h5>
                     <p class="card-text">A Delta City projekt továbbra is halad, és az új városépítési tervek már elérhetőek a nyilvánosság számára. Az építkezés várhatóan 2025-ben fejeződik be.</p>
@@ -37,7 +37,7 @@
         </div>
         <div class="col-md-4 mb-4">
             <div class="card h-100">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Hírkép">
+                <img src="static/images/robocop.png" class="card-img-top" alt="Hírkép">
                 <div class="card-body">
                     <h5 class="card-title">RoboCop prototípus frissítés</h5>
                     <p class="card-text">Az OCP mérnökei sikeresen integrálták a legújabb technológiát a RoboCop programba. A következő generációs prototípus már képes bonyolultabb feladatok ellátására is.</p>
