--- a/office/templates/office/office.html
+++ b/office/templates/office/office.html
@@ -4,8 +4,7 @@
 {% block content %}
 <div class="grid-container" style="height: 80vh;">
     <div class="grid-header">
-        <button id="toggle-button" class="btn btn-warning mx-2" onclick="toggleButton()">Élet</button>
-    </div>
+        <button id="toggle-button" class="btn btn-warning mx-2" onclick="toggleButton()">Élet</button>    </div>
     <div class="grid-sidebar" id="email-list">
         <!-- A kártyák ide fognak kerülni dinamikusan -->
     </div>
@@ -13,9 +12,7 @@
         {% comment %} <div class="oloader-container"><div class="oloader"></div></div> {% endcomment %}
     </div>
     <div class="grid-footer">
-        <button class="btn btn-secondary mx-2">Gomb 1</button>
-        <button class="btn btn-secondary mx-2">Gomb 2</button>
-        <button class="btn btn-secondary mx-2">Gomb 3</button>
+        <textarea id="custom-textarea" class="form-control" rows="2" placeholder="Kérlek röviden foglald össze a történteket a levelek alapján."></textarea>
     </div>
 </div>
 
