--- a/templates/base.html
+++ b/templates/base.html
@@ -26,13 +26,13 @@
                     <a class="nav-link" href="{% url 'index' %}">Intranet</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'office' %}">Email</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="{% url 'organization_chart' %}">Telefonkönyv</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Jira</a>
+                    <a class="nav-link" href="{% url 'office' %}">Email</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'jira_view' %}">Jira</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Magicbook</a>
